--- a/index.html
+++ b/index.html
@@ -908,7 +908,7 @@
 
         document.addEventListener('DOMContentLoaded', function () {
             liff.init({
-                liffId: '2005254357-zKma9BZk'
+                liffId: '2007742742-Pvkm4aV6'
             }).then(() => {
                 console.log('LIFF初期化成功');
             }).catch((err) => {
