--- a/index.html
+++ b/index.html
@@ -807,7 +807,7 @@
         document.addEventListener('DOMContentLoaded', function () {
             // LIFF初期化
             liff.init({
-                liffId: ''
+                liffId: '2007890432-Qx1VEejP'
             }).then(() => {
                 console.log('LIFF初期化成功');
             }).catch((err) => {
