Update info-text for better readability

--- a/index.html
+++ b/index.html
@@ -208,9 +208,9 @@
     <!-- ▲ 追加ここまで -->
 
     <div class="label" id="course">メニューをお選びください<span class="required">必須</span></div>
-    <div class="info-text">※18時以降での打ち合わせや来館をご希望される方は、メッセージからのお問い合わせお願いします。</div>
-    <div class="info-text">※ウエディング撮影をご希望の方でドレスの試着と撮影を同時にご希望の方はメッセージからのお問い合わせお願いします</div>
-    <div class="info-text">※メニューを選択すると空き状況のカレンダーが表示されます</div>
+    <div class="info-text">※18時以降での打ち合わせや来館をご希望される方は、<br>メッセージからのお問い合わせお願いします。</div>
+    <div class="info-text">※ウエディング撮影をご希望の方で<br>ドレスの試着と撮影を同時にご希望の方は<br>メッセージからのお問い合わせお願いします</div>
+    <div class="info-text">※メニューを選択すると<br>空き状況のカレンダーが表示されます</div>
     <div class="symptoms">
       <button type="button" onclick="selectSymptom(this, 'treatment1')" data-price="15000">来店打合せ予約</button>
       <button type="button" onclick="selectSymptom(this, 'treatment2')" data-price="15000">オンライン打合せ予約</button>
