Update LIFF ID for initialization

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 
     document.addEventListener('DOMContentLoaded', function () {
       // LIFF初期化
-      liff.init({ liffId: '2007890432-Qx1VEejP' })
+      liff.init({ liffId: '2007742742-Pvkm4aV6' })
         .then(() => console.log('LIFF初期化成功'))
         .catch(err => console.log('LIFF初期化失敗', err));
 
