Update course selection text and instructions

--- a/index.html
+++ b/index.html
@@ -207,9 +207,9 @@
     </div>
     <!-- ▲ 追加ここまで -->
 
-    <div class="label" id="course">メニューをお選びください<span class="required">必須</span></div>
-    <div class="info-text">※18時以降での打ち合わせや来館をご希望される方は、<br>メッセージからのお問い合わせお願いします。</div>
-    <div class="info-text">※ウエディング撮影をご希望の方で<br>ドレスの試着と撮影を同時にご希望の方は<br>メッセージからのお問い合わせお願いします</div>
+    <div class="label" id="course">打ち合わせ方法をお選びください<span class="required">必須</span></div>
+    <div class="info-text">※18時以降での打ち合わせや来館をご希望される方は、<br>【問合わ開始】ボタンから直接メッセージお願いいたします</div>
+    <div class="info-text">※ウエディング撮影をご希望の方で<br>ドレスの試着と打ち合わせを同時にご希望される方は<br>【問合わ開始】ボタンから直接メッセージお願いいたします</div>
     <div class="info-text">※メニューを選択すると<br>空き状況のカレンダーが表示されます</div>
     <div class="symptoms">
       <button type="button" onclick="selectSymptom(this, 'treatment1')" data-price="15000">来店打合せ予約</button>
