--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
   </div>
 
   <div class="container">
-    <h1>アイプロ打合せ・スタジオ<br>見学予約フォーム</h1>
+    <h1>アイプロ打合せ・スタジオ見学<br>予約フォーム</h1>
 
     <div class="label">お客様名<span class="required">必須</span></div>
     <input type="text" id="name" placeholder="お名前を入力してください" oninput="saveInput('name')">
